# secret_friends_tg_bot

./: .env.example  .flake8  Dockerfile  alembic.ini  pyproject.toml
.github/workflows/: lint.yml
src/api/: main.py  settings.py
src/api/db/: db.py  start.py
src/api/db/models/: recommendation.py  state.py  user.py  user_recommendation_state.py
src/api/migrations/: env.py
src/api/migrations/versions/: a987ca7dcd96_.py
src/api/repositories/: recommendation.py  user.py
src/api/routers/: dependencies.py  recommendation.py  routers.py  user.py
src/api/schemas/: recommendation.py  user.py
src/api/services/: recommendation.py  user.py
src/api/utils/: exceptions.py  repository.py
